enable app with interceptor

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group = 'com.xiao'
 version = '0.0.1-SNAPSHOT'
@@ -20,11 +22,6 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
-}
-
-bootJar {
-	baseName = "tron-rest-service"
-	version = "0.1.0"
 }
 
 dependencies {
